--- a/docker-compose.windows.yml
+++ b/docker-compose.windows.yml
@@ -1,8 +1,9 @@
 services:
   windows-canvas-docker:
-    image: ubuntu
-    command: apt-get install curl && curl -fsSL https://get.docker.com | sh
+    build:
+      context: .
+      dockerfile: Dockerfile.windows
+    command: sleep infinity #/canvas-source-code/windows.entrypoint.sh
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./:/canvas-source-code
-#docker run --rm -it -v /var/run/docker.sock:/var/run/docker.sock -v ${PWD}:/canvas-lms-source ubuntu bash
